django_projects/pimp/fixtures/projects/1/samples/POS/Beer_3_full3.mzXML
version https://git-lfs.github.com/spec/v1
oid sha256:d325f600e97e5eaa2ce540dc51d4caf8bee26baa0ee8ac4804d276cc81e24790
size 21240326
